2001-02-23  Matt Waggoner  <matt@waggoner.com>

	* Changed client/chat.c to intercept chat text that begins with a
		slash.  This could be the start of a general-purpose slash-command
		syntax.  The only command that is intercepted now is /beep NAME,
		where NAME is a name of one of the players in the game.  If you are
		the player whose name is NAME, a beep sound is generated; otherwise,
		it is ignored.  The purpose of this command is for players to be 
		able to get someone's attention.
	* Changed client/histogram.c to include number of times each value
		was rolled, percentage of the time each value was rolled, and
		text labels along the left side.

2001-02-22  David Fallon  <davef@getacard.com>

	* Added walrusmonkey's port background patch. (SF Patch #103768)
		I like this patch... One change might be to make the port icons
		a little larger, but all in all, the more I use it, the more I
		prefer it over the old tiles.

	* client/guimap.c: Changes how the port background rendering works. I
		changed the radius from 13 to 15 and the x/y offsets to make the
		circle a bit bigger (so the "type" is easier to figure out) and
		the 2:1/3:1 be centered. (in addition to the raw patch)

2001-02-22  Matt Waggoner  <matt@waggoner.com>

	* Added a chat window message when someone wins.
		In shiny purple!

2001-02-16  David Fallon  <davef@getacard.com>

	* Added Jeff Breidenbach's <jeff@alum.mit.edu> histogram patch.
		(SF Patch # 103459, 103460, 103461)

	* client/Makefile.am: Added histogram.[ch] to sources
	* client/histogram.c: Added the file - it handles the dice recording
		and the actual histogram dialog generation
	* client/histogram.h: Added the file - heade file for histogram.c
	* client/gui.c - Added help_histogram_cb function, added "Dice Histogram"
		menu option to the Help menu.
	* client/turn.c - Added call to "dice_histogram" function to record
		dice rolls for the histogram generation.

2001-02-16  Matt Waggoner  <matt@waggoner.com>
